Quarkus: Refactor Invoice creation to use customer code and item code for improved clarity and validation